--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.0
+  mobx_codegen: ^2.0.1+3
+  provider: ^6.0.0
+  shared_preferences: ^2.0.5
+  curved_navigation_bar: ^1.0.1
+  rounded_loading_button: ^2.0.4
+  fluttertoast: ^8.0.6
+  import_sorter: ^4.5.1
+  http: ^0.13.3
+  build_runner: ^2.0.4
+  jwt_decode: ^0.3.1
+  another_flushbar: ^1.10.24
+  firebase_auth: ^3.0.2
+  firebase_core: ^1.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -58,9 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
