--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   another_flushbar: ^1.10.24
   firebase_auth: ^3.0.2
   firebase_core: ^1.5.0
+  url_launcher: ^6.0.12
 
 
   # The following adds the Cupertino Icons font to your application.
