--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fin.finneasy">
     <uses-permission android:name="android.permission.INTERNET" />
-   <application
+    <uses-permission android:name="android.permission.READ_SMS"/>
+
+    <application
         android:label="FinnEasy!"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
