--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   firebase_auth: ^3.0.2
   firebase_core: ^1.5.0
   url_launcher: ^6.0.12
-
+  telephony: ^0.1.4
+  flutter_webview_plugin: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
