--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   url_launcher: ^6.0.12
   telephony: ^0.1.4
   webview_flutter: ^2.1.1
+  file_picker: ^4.1.4
+  flutter_image_compress: ^1.1.0
+  share: ^2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
