--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   file_picker: ^4.1.4
   flutter_image_compress: ^1.1.0
   share: ^2.0.4
+  syncfusion_flutter_charts: ^19.3.45+1
+  timelines: ^0.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
